crates/mockql-core/src/graphql/snapshots/schema_filter/unions/mockql_core__graphql__schema_filter__tests__filter_produces_expected_schema_for_operations@unions__typename_only.graphql.snap
---
source: crates/mockql-core/src/graphql/schema_filter.rs
expression: "SCHEMA_FILTER.filter(&content,\noperation_name.as_deref()).expect(\"filter should succeed\")"
input_file: crates/mockql-core/src/graphql/snapshots/schema_filter/unions/typename_only.graphql
---
interface Node {
  id: ID!
  createdAt: String!
}
type Product implements Node & Reviewable {
  id: ID!
  upc: String!
  weight: Int
  price: Int
  inStock: Boolean
  shippingEstimate: Int
  name: String
  reviews: [Review]
  reviewsForAuthor(authorID: ID!): [Review]
  createdAt: String!
  averageRating: Float
}
type Query {
  search(query: String!): [SearchResult]
}
interface Reviewable {
  reviews: [Review]
  averageRating: Float
}
union SearchResult = Product
"""
The `String` scalar type represents textual data, represented as UTF-8 character sequences. The String type is most often used by GraphQL to represent free-form human-readable text.
"""
scalar String
